syntax = "proto3";

package foghorn;

option go_package = "frameworks/pkg/proto";

import "shared.proto";

// =============================================================================
// FOGHORN CONTROL PLANE SERVICES
// These are control-plane operations exposed by Foghorn for Commodore to call.
// Media-plane operations (MistServer control, stream state) remain in ipc.proto.
// =============================================================================

// ClipService handles clip creation and management
service ClipControlService {
  // CreateClip creates a new clip from a stream
  rpc CreateClip(shared.CreateClipRequest) returns (shared.CreateClipResponse);
  // DeleteClip deletes a clip
  rpc DeleteClip(shared.DeleteClipRequest) returns (shared.DeleteClipResponse);
}

// DVRControlService handles DVR recording management
service DVRControlService {
  // StartDVR initiates DVR recording for a stream
  rpc StartDVR(shared.StartDVRRequest) returns (shared.StartDVRResponse);
  // StopDVR stops an active DVR recording
  rpc StopDVR(shared.StopDVRRequest) returns (shared.StopDVRResponse);
  // DeleteDVR deletes a DVR recording and its files
  rpc DeleteDVR(shared.DeleteDVRRequest) returns (shared.DeleteDVRResponse);
}

// ViewerControlService handles viewer and ingest endpoint resolution
service ViewerControlService {
  // ResolveViewerEndpoint resolves the best endpoint(s) for a viewer
  rpc ResolveViewerEndpoint(shared.ViewerEndpointRequest) returns (shared.ViewerEndpointResponse);
  // ResolveIngestEndpoint resolves the best endpoint(s) for StreamCrafter ingest
  rpc ResolveIngestEndpoint(shared.IngestEndpointRequest) returns (shared.IngestEndpointResponse);
}

// VodControlService handles VOD upload management (user-initiated video uploads)
service VodControlService {
  // CreateVodUpload initiates a multipart upload and returns presigned URLs
  rpc CreateVodUpload(shared.CreateVodUploadRequest) returns (shared.CreateVodUploadResponse);
  // CompleteVodUpload finalizes the multipart upload after all parts are uploaded
  rpc CompleteVodUpload(shared.CompleteVodUploadRequest) returns (shared.CompleteVodUploadResponse);
  // AbortVodUpload cancels an in-progress multipart upload
  rpc AbortVodUpload(shared.AbortVodUploadRequest) returns (shared.AbortVodUploadResponse);
  // GetVodAsset returns a single VOD asset by hash
  rpc GetVodAsset(shared.GetVodAssetRequest) returns (shared.VodAssetInfo);
  // ListVodAssets returns paginated list of VOD assets for a tenant
  rpc ListVodAssets(shared.ListVodAssetsRequest) returns (shared.ListVodAssetsResponse);
  // DeleteVodAsset deletes a VOD asset
  rpc DeleteVodAsset(shared.DeleteVodAssetRequest) returns (shared.DeleteVodAssetResponse);
}

// TenantControlService handles tenant-level operations called by Purser
service TenantControlService {
  // TerminateTenantStreams stops all active streams for a tenant (called when suspended)
  rpc TerminateTenantStreams(TerminateTenantStreamsRequest) returns (TerminateTenantStreamsResponse);
  // InvalidateTenantCache clears cached suspension status for a tenant (called on reactivation)
  rpc InvalidateTenantCache(InvalidateTenantCacheRequest) returns (InvalidateTenantCacheResponse);
}

// InvalidateTenantCacheRequest is sent when a tenant's suspension status changes
message InvalidateTenantCacheRequest {
  string tenant_id = 1;
  string reason = 2; // e.g., "reactivated", "balance_topped_up"
}

// InvalidateTenantCacheResponse indicates cache entries invalidated
message InvalidateTenantCacheResponse {
  int32 entries_invalidated = 1;
}

// TerminateTenantStreamsRequest is sent by Purser when a tenant is suspended
message TerminateTenantStreamsRequest {
  string tenant_id = 1;
  string reason = 2; // e.g., "insufficient_balance", "suspended"
}

// TerminateTenantStreamsResponse indicates the result of termination
message TerminateTenantStreamsResponse {
  int32 streams_terminated = 1;   // Number of streams that were stopped
  int32 sessions_terminated = 2;  // Total number of sessions stopped
  repeated string stream_names = 3; // Names of streams that were stopped
}
